Address comments-1